Migrated to tensorflow 2.0.0-alpha0 (and embedded Keras API)

--- a/python-scripts/autoencoder-anomaly-detection/Python-Tensorflow-2.0-Keras-Fraud-Detection-Autoencoder.ipynb
+++ b/python-scripts/autoencoder-anomaly-detection/Python-Tensorflow-2.0-Keras-Fraud-Detection-Autoencoder.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "The autoencoder compresses the data and tries to reconstruct it. The reconstruction error finds anomalies.\n",
     "\n",
-    "This Jupyter notebook was tested with Python 3.6.7, Numpy 1.16.4, scikit-learn 0.20.1 and tensorflow 1.13.1. \n",
+    "This Jupyter notebook was tested with Python 3.6.7, Numpy 1.16.4, scikit-learn 0.20.1 and tensorflow 2.0.0-alpha0. \n",
     "\n",
     "Kudos to David Ellison who created the foundation for this example: https://www.datascience.com/blog/fraud-detection-with-tensorflow"
    ]
@@ -757,13 +757,7 @@
       "227468/227468 [==============================] - 4s 16us/sample - loss: 0.6897 - accuracy: 0.6981 - val_loss: 0.7244 - val_accuracy: 0.6986\n",
       "Epoch 53/100\n",
       "227468/227468 [==============================] - 4s 17us/sample - loss: 0.6897 - accuracy: 0.6990 - val_loss: 0.7244 - val_accuracy: 0.6999\n",
-      "Epoch 54/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 54/100\n",
       "227468/227468 [==============================] - 4s 17us/sample - loss: 0.6895 - accuracy: 0.6979 - val_loss: 0.7243 - val_accuracy: 0.6992\n",
       "Epoch 55/100\n",
       "227468/227468 [==============================] - 4s 16us/sample - loss: 0.6895 - accuracy: 0.6985 - val_loss: 0.7258 - val_accuracy: 0.6942\n",
