Streaming Ingestion into Autoencoder - Added TODOs to discuss with SIG TF IO Team

--- a/python-scripts/autoencoder-anomaly-detection/Python-Tensorflow-2.0-Kafka-Streaming-Ingestion-Keras-Fraud-Detection-Autoencoder.ipynb
+++ b/python-scripts/autoencoder-anomaly-detection/Python-Tensorflow-2.0-Kafka-Streaming-Ingestion-Keras-Fraud-Detection-Autoencoder.ipynb
@@ -22,6 +22,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODOs:\n",
+    "    \n",
+    "Replace CSV data import with TF IO Kafka plugin... \n",
+    "\n",
+    "Open question: What are the steps to do this? \n",
+    "(most of below code is for visualisation, not for training => Focus of this Notebook should be model ingestion and training - the visualisation is nice to have but can be neglected)\n",
+    "\n",
+    "\n",
+    "### Code to change? \n",
+    "This is the key line:\n",
+    "df = pd.read_csv(\"../../data/sensor_data.csv\")\n",
+    "\n",
+    "=> Needs to be replaced with something like:\n",
+    "kafka_sensordata = kafka_io.KafkaDataset(['sensor-topic'], group='xx', eof=True)\n",
+    "\n",
+    "=> Then we can build the Keras model and do training with the KafkaDataSet as parameter:\n",
+    "\n",
+    "model = tf.keras.Sequential([...])\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(kafka_sensordata, epochs=1, steps_per_epoch=1000, callbacks=[tensorboard_callback])\n",
+    "\n",
+    "### Optional: Visualization\n",
+    "\n",
+    "Optional (if easy to do): convert kafka input data into pandas dataframe (optional, just for visualisation)\n",
+    "\n",
+    "df = kafka_sensordata.???convertToPandasDataframe???\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
